# covid

./: .gitignore  README.md  covid.ipynb  pyproject.toml
