[tool.poetry]
name = "covid"
version = "0.1.0"
description = "notebook sobre obitos por covid"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.5,<=3.10.5"
notebook = "^6.4.12"
pandas = "^1.4.4"

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
